styling of customer list

--- a/src/components/pages/Overview/CustomerList/styles/customerList.scss
+++ b/src/components/pages/Overview/CustomerList/styles/customerList.scss
@@ -1,3 +1,9 @@
-.customer-list .selected {
-  font-weight: bold;
+.customer-list {
+  tr td {
+    cursor: pointer;
+  }
+
+  .selected {
+    font-weight: bold;
+  }
 }
